Bug 1261284: Don't include <button>'s children in overflow areas, if we know we're going to clip them when painting. r=mats

MozReview-Commit-ID: BG1tGEQjFI2